--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3208,6 +3208,7 @@ startErrorTracking('PC-Name', 'https://dynamic-website-hzu1.onrender.com', 'YOUR
     });
     </script>
     <script src="/api-management-fixed.js"></script>
+    <script src="/auto-refresh-pcs.js"></script>
     <script src="/run-credentials.js"></script>
     <script src="/dashboard-additions-new.js"></script>
 </body>
