--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3207,9 +3207,6 @@ startErrorTracking('PC-Name', 'https://dynamic-website-hzu1.onrender.com', 'YOUR
         loadPcList();
     });
     </script>
-    <script src="/api-management-fixed.js"></script>
-    <script src="/auto-refresh-pcs.js"></script>
-    <script src="/run-credentials.js"></script>
-    <script src="/dashboard-additions-new.js"></script>
+    <script src="/enhanced-dashboard.js"></script>
 </body>
 </html>
